add enterprise feature pills to docs

--- a/metricexport.mdx
+++ b/metricexport.mdx
@@ -2,6 +2,7 @@
 title: Metrics Export
 description: Export Chalk metrics to other monitoring systems.
 published: true
+enterpriseFeature: true
 ---
 
 import {
