--- a/notebook-setup.mdx
+++ b/notebook-setup.mdx
@@ -78,7 +78,7 @@ from chalk import ChalkClient
 client = ChalkClient(branch="new-feature")
 ```
 
-### Google Colab Enterprise
+### Vertex & Google Colab Enterprise
 
 On Google Colab Enterprise, you can set up secrets using the Google Secret Manager.
 Add secrets named `chalk-client-id` and `chalk-client-secret` to Google Secret Manager
