--- a/notebook-setup.mdx
+++ b/notebook-setup.mdx
@@ -73,7 +73,7 @@ Select `Python 3.10` as the image under **Environment > Compute Profile**.
 The Chalk client can then be initialized referencing the variables directly
 
 ```python notebook.ipynb
-from chalk import ChalkClient
+from chalk.client import ChalkClient
 
 client = ChalkClient(branch="new-feature")
 ```
