--- a/notebook-setup.mdx
+++ b/notebook-setup.mdx
@@ -55,7 +55,7 @@ You can then initialize Chalk by running the following code in a cell:
 
 ```python notebook.ipynb
 import os
-from chalk import ChalkClient
+from chalk.client import ChalkClient
 
 client = ChalkClient(branch="new-feature")
 ```
