--- a/notebook-setup.mdx
+++ b/notebook-setup.mdx
@@ -82,7 +82,7 @@ client = ChalkClient(branch="new-feature")
 
 On Google Colab Enterprise, you can set up secrets using the Google Secret Manager.
 Add secrets named `chalk-client-id` and `chalk-client-secret` to Google Secret Manager
-for your Chalk client id and client secret.
+that correspond to your Chalk client id and client secret.
 
 ![Google Colab Secret](/img/ColabSecret.png)
 
