--- a/changelog.mdx
+++ b/changelog.mdx
@@ -7,11 +7,31 @@ description: Updates to Chalk!
 
 ---
 
+## October 18, 2024
+
+### Pub Sub streaming source
+
+We've enabled support for using [Pub Sub](https://cloud.google.com/pubsub?hl=en) as a streaming source.
+Read more about how to use Pub Sub as a streaming source [here](/docs/streams).
+
+### SQL explorer for query outputs in the dashboard
+
+Customers running gRPC servers can now run SQL queries on the [dataset](/docs/datasets)
+outputs of online and offline queries in the dashboard. To enable this feature for your deployment,
+please reach out to the team.
+
+### Color updates in the dashboard
+
+We've updated our color scheme in the dashboard to more clearly differentiate between successes and failures
+in metrics graphs!
+
+![Red for failures and green for successes](/img/10_2024_color_updates_dashboard.png)
+
 ## October 14, 2024
 
 ### SQL explorer in dashboard for datasets
 
-Customers can now run SQL queries on [dataset](https://docs.chalk.ai/docs/datasets) outputs 
+Customers can now run SQL queries on [dataset](/docs/datasets) outputs
 in the dashboard. To use this feature, navigate to the `Datasets` page in the menu, select a dataset,
 and click on the `Output Explorer` tab.
 
