--- a/changelog.mdx
+++ b/changelog.mdx
@@ -9,7 +9,7 @@ description: Updates to Chalk!
 
 ## October 18, 2024
 
-### Pub Sub streaming source
+### Pub/Sub streaming source
 
 We've enabled support for using [Pub Sub](https://cloud.google.com/pubsub?hl=en) as a streaming source.
 Read more about how to use Pub Sub as a streaming source [here](/docs/streams).
