--- a/changelog.mdx
+++ b/changelog.mdx
@@ -12,7 +12,7 @@ description: Updates to Chalk!
 ### Pub/Sub streaming source
 
 We've enabled support for using [Pub/Sub](https://cloud.google.com/pubsub?hl=en) as a streaming source.
-Read more about how to use Pub Sub as a streaming source [here](/docs/streams).
+Read more about how to use Pub/Sub as a streaming source [here](/docs/streams).
 
 ### SQL explorer for query outputs in the dashboard
 
