--- a/changelog.mdx
+++ b/changelog.mdx
@@ -18,7 +18,7 @@ Read more about how to use Pub/Sub as a streaming source [here](/docs/streams).
 
 Outputs for offline query can now be automatically transferred to online and offline storage with the parameters
 `store_online=True` and `store_offline=True` in `ChalkClient().offline_query()`.
-See [the docs](https://docs.chalk.ai/api-docs#ChalkClient.offline_query) for more details
+See [the docs](https://docs.chalk.ai/api-docs#ChalkClient.offline_query) for more details.
 
 ### SQL explorer for query outputs in the dashboard
 
