--- a/sagemaker-tutorial.mdx
+++ b/sagemaker-tutorial.mdx
@@ -446,6 +446,7 @@ can be accomplished by encoding your input features and then using the `F.sagema
 function. You can specify your target SageMaker endpoint in the underscore function's parameters.
 
 ```python
+import chalk.functions as F
 @features
 class Transaction:
     id: int
