--- a/underscore.mdx
+++ b/underscore.mdx
@@ -132,11 +132,11 @@ says None values are skipped in the table below, it will consider a DataFrame wi
 | `min` | Skipped | Returns `None` | |
 | `max` | Skipped | Returns `None` | |
 | `mean` | Skipped | Returns `None` | Feature type must be `float` or <code>float &#124; None</code>. `None` values are skipped, meaning they are not included in the mean calculation.  |
-|`count` | Included | Returns `0` | 
+|`count` | Included | Returns `0` |
 |`any` | Skipped | Returns `False` | |
 |`all` | Skipped | Returns `True` | |
-|`std` | Skipped | See notes | Standard deviation. Requires at least 2 values. For DataFrames with less than 2 values, returns `None`.<br/><br/>Aliases: `stddev`, `stddev_sample`, `std_sample`. | 
-|`var` | Skipped | See notes | Variance. Same requirements as `std`.<br/><br/>Alias: `var_sample`. | 
+|`std` | Skipped | See notes | Standard deviation. Requires at least 2 values. For DataFrames with less than 2 values, returns `None`.<br/><br/>Aliases: `stddev`, `stddev_sample`, `std_sample`. |
+|`var` | Skipped | See notes | Variance. Same requirements as `std`.<br/><br/>Alias: `var_sample`. |
 |`approx_count_distinct` | Skipped | Returns `0` | |
 |`approx_percentile` | Skipped | Returns `None` | Takes one argument, `quantile`, expected to be a float in the range `[0, 1]`.<br/><br/>Example: `approx_percentile(0.75)` returns a value approximately equal to the 75th percentile of the not-`None` values in the DataFrame. |
 
@@ -149,10 +149,31 @@ combination with underscore references to transform features:
 
 * [`bytes_to_string`](/api-docs#bytes_to_string)
 * [`coalesce`](/api-docs#coalesce)
-* [`cosine_similarity`](/api-docs#cosine_similarity)
 * [`gunzip`](/api-docs#gunzip)
 * [`json_value`](/api-docs#json_value)
 * [`md5`](/api-docs#md5)
 * [`string_to_bytes`](/api-docs#string_to_bytes)
 * [`total_seconds`](/api-docs#total_seconds)
-
+* [hour_of_day](/api-docs#hour_of_day),
+* [day_of_week](/api-docs#day_of_week),
+* [day_of_month](/api-docs#day_of_month),
+* [day_of_year](/api-docs#day_of_year),
+* [week_of_year](/api-docs#week_of_year),
+* [month_of_year](/api-docs#month_of_year),
+* [unix_milliseconds](/api-docs#unix_milliseconds),
+* [unix_seconds](/api-docs#unix_seconds),
+* [cos](/api-docs#cos),
+* [sin](/api-docs#sin),
+* [exp](/api-docs#exp),
+* [ln](/api-docs#ln),
+* [power](/api-docs#power),
+* [head](/api-docs#head),
+* [reverse](/api-docs#reverse),
+* [slice](/api-docs#slice),
+* [trim](/api-docs#trim),
+* [like](/api-docs#like),
+* [regexp_like](/api-docs#regexp_like),
+* [starts_with](/api-docs#starts_with),
+* [ends_with](/api-docs#ends_with),
+* [`cosine_similarity`](/api-docs#cosine_similarity)
+* [sagemaker_predict](/api-docs#sagemaker_predict),
