list out all underscores

--- a/underscore.mdx
+++ b/underscore.mdx
@@ -147,33 +147,47 @@ to `float | None`) or use [`coalesce`](/api-docs#coalesce) to fall back to a def
 The `chalk.functions` module exposes several helpful functions that can be used in
 combination with underscore references to transform features:
 
+#### Encoding and decoding
+
 * [`bytes_to_string`](/api-docs#bytes_to_string)
-* [`coalesce`](/api-docs#coalesce)
-* [`gunzip`](/api-docs#gunzip)
-* [`json_value`](/api-docs#json_value)
-* [`md5`](/api-docs#md5)
 * [`string_to_bytes`](/api-docs#string_to_bytes)
-* [`total_seconds`](/api-docs#total_seconds)
-* [hour_of_day](/api-docs#hour_of_day),
-* [day_of_week](/api-docs#day_of_week),
-* [day_of_month](/api-docs#day_of_month),
-* [day_of_year](/api-docs#day_of_year),
-* [week_of_year](/api-docs#week_of_year),
-* [month_of_year](/api-docs#month_of_year),
-* [unix_milliseconds](/api-docs#unix_milliseconds),
-* [unix_seconds](/api-docs#unix_seconds),
-* [cos](/api-docs#cos),
-* [sin](/api-docs#sin),
-* [exp](/api-docs#exp),
-* [ln](/api-docs#ln),
-* [power](/api-docs#power),
-* [head](/api-docs#head),
-* [reverse](/api-docs#reverse),
-* [slice](/api-docs#slice),
-* [trim](/api-docs#trim),
-* [like](/api-docs#like),
-* [regexp_like](/api-docs#regexp_like),
-* [starts_with](/api-docs#starts_with),
-* [ends_with](/api-docs#ends_with),
-* [`cosine_similarity`](/api-docs#cosine_similarity)
-* [sagemaker_predict](/api-docs#sagemaker_predict),
+* [`gunzip`](/api-docs#gunzip)
+* [`md5`](/api-docs#md5)
+* [`coalesce`](/api-docs#coalesce)
+* [`json_value`](/api-docs#json_value)
+
+#### Datetime Manipulation
+
+* [`total_seconds`](/api-docs#total_seconds
+* [`hour_of_day`](/api-docs#hour_of_day)
+* [`day_of_week`](/api-docs#day_of_week)
+* [`day_of_month`](/api-docs#day_of_month)
+* [`day_of_year`](/api-docs#day_of_year)
+* [`week_of_year`](/api-docs#week_of_year)
+* [`month_of_year`](/api-docs#month_of_year)
+* [`unix_milliseconds`](/api-docs#unix_milliseconds)
+* [`unix_seconds`](/api-docs#unix_seconds)
+
+#### Math
+
+* [`cos`](/api-docs#cos)
+* [`sin`](/api-docs#sin)
+* [`exp`](/api-docs#exp)
+* [`ln`](/api-docs#ln)
+* [`power`](/api-docs#power)
+
+#### String Manipulation
+
+* [`reverse`](/api-docs#reverse)
+* [`slice`](/api-docs#slice)
+* [`trim`](/api-docs#trim)
+* [`like`](/api-docs#like)
+* [`regexp_like`](/api-docs#regexp_like)
+* [`starts_with`](/api-docs#starts_with)
+* [`ends_with`](/api-docs#ends_with)
+
+#### Other
+
+* [`head`](/api-docs#head)
+* [`cosine_similarity`](/pi-docs#cosine_similarity)
+* [`sagemaker_predict`](/api-docs#sagemaker_predict)
