--- a/sagemaker-tutorial.mdx
+++ b/sagemaker-tutorial.mdx
@@ -442,7 +442,7 @@ model to an endpoint, which is documented
 ## Efficient SageMaker inference with Chalk underscores
 
 Once you've defined your SageMaker endpoint, you can run predictions against SageMaker from Chalk. This
-can be accomplished by encoding your input features and then using the `F.sagemaker_predict` underscore
+can be accomplished by encoding your input features and then using the [`F.sagemaker_predict`](/api-docs#sagemaker_predict) underscore.
 function. You can specify your target SageMaker endpoint in the underscore function's parameters.
 
 ```python
