--- a/underscore.mdx
+++ b/underscore.mdx
@@ -158,7 +158,7 @@ combination with underscore references to transform features:
 
 #### Datetime Manipulation
 
-* [`total_seconds`](/api-docs#total_seconds
+* [`total_seconds`](/api-docs#total_seconds)
 * [`hour_of_day`](/api-docs#hour_of_day)
 * [`day_of_week`](/api-docs#day_of_week)
 * [`day_of_month`](/api-docs#day_of_month)
